# lib-version

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yaml
src/: lib_version.py  lib_version_team11.py
